<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.etf.dna.stellaris_wireless.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="189dp"
        android:layout_height="38dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/ip_desc"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="33dp"
        android:text="@string/ip_addr"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="81dp"
        android:layout_height="35dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="35dp"
        android:text="@string/conn"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="104dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/disconn"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintLeft_toRightOf="@+id/button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:layout_editor_absoluteX="168dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="79dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:text="@string/up_arrow"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginRight="159dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/button4"
        android:layout_width="79dp"
        android:layout_height="90dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/down_arrow"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="64dp"
        android:layout_height="72dp"
        android:layout_marginTop="19dp"
        android:text="@string/left_arrow"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        android:layout_marginLeft="29dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="53dp"
        android:layout_height="47dp"
        android:layout_marginLeft="23dp"
        android:text="@string/rot_left_arrow"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="62dp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="64dp"
        android:layout_height="70dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/right_arrow"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:layout_marginRight="0dp"
        android:text="@string/rot_right_arrow"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        android:layout_marginTop="69dp"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="69dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/speed_up"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_marginBottom="0dp"
        android:text="@string/speed_down"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.971" />

    <Button
        android:id="@+id/button11"
        android:layout_width="86dp"
        android:layout_height="54dp"
        android:layout_marginBottom="42dp"
        android:text="@string/stop"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
